Fix #22 Top-align courses overview block

--- a/style/stellar.css
+++ b/style/stellar.css
@@ -17799,3 +17799,6 @@ form#authmenu table tr td:first-child {
 .path-mod-scheduler table.schedulercommands th h3 {
   text-align: left;
 }
+#page-my-index #region-main {
+  padding-top: 0;
+}
